--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ VITE_API_BASE_URL_PROD = 'https://backend-dorsiamanagement-duh8hrf5b7evgqaz.west
 VITE_API_ADMIN_URL_PROD = 'https://backend-dorsiamanagement-duh8hrf5b7evgqaz.westeurope-01.azurewebsites.net/admin/' 
 VITE_WHEATER_API_KEY = 'c4ceb67a94d9bd597fb61b08ace3310a'
 VITE_URBIS_APP_URL_DEV = 'http://localhost:5173/'
-VITE_URBIS_APP_URL_PROD = 'https://app-urbis.com/'
+VITE_URBIS_APP_URL_PROD = 'https://www.app-urbis.com/'
