--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
-VITE_API_BASE_URL_DEV = 'http://localhost:8000/api/'
-VITE_API_ADMIN_URL_DEV = 'http://localhost:8000/admin'
-VITE_API_BASE_URL_PROD = 'https://backend-dorsiamanagement-duh8hrf5b7evgqaz.westeurope-01.azurewebsites.net/api/' 
-VITE_API_ADMIN_URL_PROD = 'https://backend-dorsiamanagement-duh8hrf5b7evgqaz.westeurope-01.azurewebsites.net/admin/' 
+VITE_API_BASE_URL = 'http://localhost:8000/api/' 
 VITE_WHEATER_API_KEY = 'c4ceb67a94d9bd597fb61b08ace3310a'
-VITE_URBIS_APP_URL_DEV = 'http://localhost:5173/'
-VITE_URBIS_APP_URL_PROD = 'https://www.app-urbis.com/'
+VITE_URBIS_APP_URL = 'http://localhost:5173/'
