--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-VITE_API_BASE_URL_DEV = 'http://localhost:8000/api/'
-VITE_API_BASE_URL_PROD = 'https://urbis-api-fkc7b8atdnhhhhd5.westeurope-01.azurewebsites.net/api/'  
-VITE_URBIS_SITE_URL_DEV = 'http://localhost:5174/'
-VITE_URBIS_SITE_URL_PROD = 'https://www.urbisapp.com/'
+VITE_URBIS_API_URL='http://localhost:8000/api/'
+VITE_URBIS_SITE_URL='http://localhost:5174/'
