--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_URBIS_API_URL='http://localhost:8000/api/'
-VITE_URBIS_SITE_URL='http://localhost:5174/'
+VITE_URBIS_APP_URL='http://localhost:5173/'
